<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/recycler_view_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hike_name_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/hike_name"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hike_name_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hike_location_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/hike_location"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hike_location_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/hike_length_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/length_of_hike"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/hike_length_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/hike_date_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/date_of_the_hike"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hike_date_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/hike_parking_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/parking_available"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hike_parking_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/hike_difficulty_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/difficulty_of_hike"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hike_difficulty_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/hike_description_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/hike_description"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hike_description_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            >
            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:src="@drawable/edit"
                />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:src="@drawable/delete"/>

            <ImageButton
                android:id="@+id/btnAddObservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:src="@drawable/add"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>