<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/recycler_view_background"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/search_hike_name_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/hike_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/search_hike_name_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/search_hike_location_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textColor="@color/black"
                android:text="@string/hike_location"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/search_hike_location_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:padding="5dp"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/search_hike_date_label"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/date_of_the_hike"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/search_hike_date_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>




    </LinearLayout>

</LinearLayout>